# California-Median-Housing-Price-Prediction

./: California-Median-Housing-Price-Prediction.ipynb  California-Medium-Housing-Price-Prediction.ipynb  README.md  main.py  pyproject.toml  requirements.txt
.analysis/: CaliforniaPrice.ipynb
.doc/: Data Dictionary.md
.src/: CaliforniaPrice.py
