[project]
name = "california-medium-housing-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adagio==0.2.6",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "appdirs==1.4.4",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.3",
    "coreforecast==0.0.16",
    "cycler==0.12.1",
    "darts==0.37.1",
    "datetime==5.5",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "executing==2.2.0",
    "filelock==3.19.1",
    "fonttools==4.59.2",
    "frozenlist==1.7.0",
    "fs==2.4.16",
    "fsspec==2025.7.0",
    "fugue==0.9.1",
    "holidays==0.80",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.9",
    "lightning-utilities==0.15.2",
    "llvmlite==0.44.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "multidict==6.6.4",
    "narwhals==2.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nfoursid==1.0.2",
    "numba==0.61.2",
    "numpy==2.2.6",
    "packaging==24.2",
    "pandas==2.3.2",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pillow==11.3.0",
    "platformdirs==4.3.6",
    "progressbar2==4.5.0",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.2",
    "protobuf==6.32.0",
    "psutil==6.1.1",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pygam==0.10.1",
    "pygments==2.19.1",
    "pyod==2.0.5",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-utils==3.9.1",
    "pytorch-lightning==2.5.2",
    "pytz==2025.2",
    "pywin32==308",
    "pyyaml==6.0.2",
    "pyzmq==26.2.1",
    "requests==2.32.5",
    "ruff==0.12.11",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "setuptools==80.9.0",
    "shap==0.48.0",
    "six==1.17.0",
    "slicer==0.0.8",
    "stack-data==0.6.3",
    "statsforecast==2.0.2",
    "statsmodels==0.14.5",
    "sympy==1.14.0",
    "tensorboardx==2.6.4",
    "threadpoolctl==3.6.0",
    "torch==2.8.0",
    "torchmetrics==1.8.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triad==0.9.8",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "utilsforecast==0.2.12",
    "uv==0.8.14",
    "wcwidth==0.2.13",
    "xarray==2025.8.0",
    "xgboost==3.0.4",
    "yarl==1.20.1",
    "zope-interface==7.2",
]
