[project]
name = "california-medium-housing-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
author=[{
    name ="Hailing Chen",email="hailing0458@gmail.com",
}]
requires-python = ">=3.13, <3.14"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pygam",
    "ruff",
    "scikit-learn",
    "scipy",
]

[dependency-groups]
dev =[
    "nbstripout-fast"
    "ruff",
    "typos",
]

typing =["ty"]

all=[
    "pre-commit",
    {include-group = "dev"},
    {include-group = "typing"}
]

[tool.ruff]
fix=true
unsafe-fixes=true
format.docstring-code-format = true
lint.pydocstyle.convention="google"
